# pdf_ai

./: pyproject.toml
src/pdf_ai/: __init__.py  cli.py  pdf_ai.py
